<resources>
    <string name="error_no_network">Erreur réseau. Vérifier vos paramètres de connexion.</string>
    <string name="error_contact_support">Une erreur est survenue, veuillez contacter le support technique.</string>
    <string name="back">Retour</string>
    <string name="update_app">Mise à jour disponible</string>
    <string name="update_message">Une nouvelle version de l\'application est disponible. Veuillez la télécharger maintenant pour continuer</string>
    <string name="update">Mettre à jour</string>
    <string name="no_internet_connexion">Aucune connexion internet</string>

    //Login
    <string name="enter_login_message">Saisissez votre identifiant</string>
    <string name="enter_code_message">Saisissez votre code</string>
    <string name="enter_code_description">6 chiffres</string>
    <string name="login_empty_error">Le champ identifiant est vide</string>
    <string name="login_unsafe_error">Le format de l\'identifiant est incorrect</string>
    <string name="hint_login">Identifiant</string>
    <string name="confirm">Valider</string>
    <string name="erase">Effacer</string>
    <string name="cancel">Annuler</string>

    //Scan
    <string name="privacy_policy">Politique de confidentialité</string>
    <string name="policy_confirmation">J\'ai lu et j\'accepte</string>
    <string name="scan">Détection</string>
    <string name="scan_voucher">Scanner un coupon</string>
    <string name="permission_required">Permission requise</string>
    <string name="camera_permission_needed">Cette application doit accéder à la caméra pour traiter les QR codes.</string>
    <string name="ok">OK</string>
    <string name="scan_finished">Détéction términée</string>
    <string name="use_scanned_voucher">Valider le coupon scanné</string>
    <string name="validate">Valider</string>

    //Profile
    <string name="my_profile">Mon Profil</string>
    <string name="my_data">Mes informations</string>
    <string name="my_data_short">Mes infos</string>
    <string name="vouchers">Coupons</string>
    <string name="my_vouchers">Mes coupons</string>
    <string name="products">Produits</string>
    <string name="my_products">Mes produits</string>
    <string name="login">Login</string>
    <string name="establishment">Établissement</string>
    <string name="email">Mail</string>
    <string name="phone">Téléphone</string>
    <string name="address">Adresse</string>
    <string name="bo_access">Accès application web</string>
    <string name="bo_two_factor_auth_none">La double authentification sur l\'application web est désactivée</string>
    <string name="bo_two_factor_auth_by_app">Génerer un code d\'accès à votre compte sur l\'application web</string>
    <string name="bo_two_factor_auth_by_mail">La double authentification sur l\'application web se fait par mail</string>
    <string name="access">Générer un code</string>
    <string name="new_line">\n</string>
    <string name="bo_sign_in_description">Veuillez utiliser ce code pour vous connecter à votre compte sur l\'application web</string>
    <string name="bo_code_expiration">Ce code expire dans:</string>
    <string name="empty_time">--:--</string>
    <string name="privacy_policy_underlined"><u>Politique de confidentialité</u></string>

    //Products
    <string name="distributed_products">Produits distribués</string>
    <string name="start_date">Date de début</string>
    <string name="expiry_date">Date d\'expiration</string>
    <string name="value">Valeur</string>
    <string name="planned_value">Prévus</string>
    <string name="validated_value">Validés</string>
    <string name="cancelled_value">Annulés</string>
    <string name="product_value_format">%s (%s€)</string>

    //Vouchers Overview
    <string name="vouchers_consumed">Coupons consommés</string>
    <string name="vouchers_remaining">Coupons restants</string>
    <string name="available">Disponibles</string>
    <string name="expected">À venir</string>
    <string name="cancelled">Annulés</string>
    <string name="consumed">Consommés</string>
    <string name="used">Utilisés</string>
    <string name="available_vouchers">Coupons disponibles</string>
    <string name="expected_vouchers">Coupons à venir</string>
    <string name="cancelled_vouchers">Coupons annulés</string>
    <string name="consumed_vouchers">Coupons consommés</string>
    <string name="price_format">%s€</string>
    <string name="usable_start_date_value">Utilisable à partir du %s</string>
    <string name="on_hold">En attente</string>
    <string name="usage_date">Utilisé le %s</string>
    <string name="cancellation_date">Annulé le %s</string>
    <string name="usable_end_date_value">Utilisable jusqu\'au %s</string>
    <string name="usable_single_date_value">Utilisable le %s</string>

    //Vouchers
    <string name="voucher_number">Numéro: %s</string>
    <string name="created_in">Crée le %s</string>
    <string name="more">Voir plus</string>
    <string name="availability_dates">Dates de disponibilité</string>
    <string name="usable_start_date">Utilisable à partir du</string>
    <string name="usable_end_date">Utilisable jusqu\'au</string>
    <string name="selected_date_format">%02d/%02d/%d</string>
    <string name="amend">Modifier</string>
    <string name="date_range">Choisir une plage de dates:</string>
    <string name="new_availability">Nouvelle disponibilité</string>
    <string name="date_hint">jj/mm/aaaa</string>
    <string name="start_date_before_end_date">La date de début doit être fixée avant la date de fin</string>
    <string name="comment">Commentaire</string>
    <string name="send">Envoyer</string>
    <string name="requests_in_progress">Demandes en cours</string>
    <string name="in_progress_highlighted_text">en cours</string>
    <string name="delete_voucher_request_confirmation">Voulez‑vous vraiment supprimer cette demande ?</string>
    <string name="no_ongoing_request">Aucune demande en cours</string>
    <string name="creation">Création:</string>
    <string name="date_time">%s à %s</string>
    <string name="voucher_value">Valeur du coupon: %s</string>
    <string name="voucher_available">DISPONIBLE</string>
    <string name="voucher_non_available">NON DISPONIBLE</string>
    <string name="voucher_on_hold">EN ATTENTE</string>
    <string name="voucher_non_retrievable">NON RÉCUPÉRABLE</string>
    <string name="voucher_used">UTILISÉ</string>
    <string name="voucher_canceled">ANNULÉ</string>
    <string name="voucher_inexistent">INEXISTANT</string>

    //Messages
    <string name="mail">Messagerie</string>
    <string name="sent">Envoyés</string>
    <string name="received">Reçus</string>
    <string name="no_received_message">Aucun message reçu</string>
    <string name="no_sent_message">Aucun message envoyé</string>
    <string name="priority_information">Information</string>
    <string name="priority_warning">Avertissement</string>
    <string name="priority_important">Important</string>
    <string name="priority_critical">Critique</string>
    <string name="sent_at">Envoyé le %s à %s</string>
    <string name="select_subject">Sélectionner un sujet</string>
    <string name="new_mail">Nouveau message</string>
    <string name="reply">Répondre</string>
    <string name="mail_body">Message</string>
    <string name="empty_mail_subject_error">Veuillez sélectionner l\'objet du message</string>
    <string name="empty_mail_body_error">Le contenu du message est vide</string>
    <string name="delete">Suppression</string>
    <string name="delete_mail_confirmation">Voulez‑vous vraiment supprimer ce message ?</string>

    //Alert
    <string name="notifications">Notifications</string>
    <string name="no_notification">Aucune notification reçue</string>
    <string name="received_at">Reçu le %s à %s</string>

</resources>