<?xml version="1.0" encoding="utf-8"?>
<net.noliaware.yumi_retailer.feature_profile.presentation.views.VoucherAmendAvailabilityView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/omnes_semibold_regular"
        android:text="@string/new_availability"
        android:textColor="@color/grey_2"
        android:textSize="19sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/start_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/omnes_regular"
        android:text="@string/usable_start_date"
        android:textColor="@color/grey_2"
        android:textSize="14sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/start_date_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_rounded_grey1"
        android:cursorVisible="false"
        android:focusable="false"
        android:fontFamily="@font/omnes_medium"
        android:hint="@string/date_hint"
        android:maxLength="10"
        android:padding="10dp"
        android:textColor="@color/grey_4"
        android:textSize="15sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/end_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/omnes_regular"
        android:text="@string/usable_end_date"
        android:textColor="@color/grey_2"
        android:textSize="14sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/end_date_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_rounded_grey1"
        android:cursorVisible="false"
        android:focusable="false"
        android:fontFamily="@font/omnes_medium"
        android:hint="@string/date_hint"
        android:maxLength="10"
        android:padding="10dp"
        android:textColor="@color/grey_4"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/comment_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_rounded_grey1"
        android:fontFamily="@font/omnes_regular"
        android:gravity="top"
        android:hint="@string/comment"
        android:imeOptions="actionUnspecified|flagNoExtractUi"
        android:inputType="textMultiLine"
        android:maxLength="500"
        android:padding="10dp"
        android:textColor="@color/grey_4"
        android:textCursorDrawable="@null"
        android:textSize="16sp" />
</net.noliaware.yumi_retailer.feature_profile.presentation.views.VoucherAmendAvailabilityView>