<?xml version="1.0" encoding="utf-8"?>
<net.noliaware.yumi_retailer.feature_profile.presentation.views.ProfileDataParentView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:paddingVertical="15dp">

        <net.noliaware.yumi_retailer.feature_profile.presentation.views.ProfileDataView
            android:id="@+id/profile_data_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/my_data_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/omnes_semibold_regular"
                android:text="@string/my_data"
                android:textColor="@color/colorPrimary"
                android:textSize="19sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/login_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/omnes_regular"
                android:text="@string/login"
                android:textColor="@color/grey_2"
                android:textSize="15sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/login_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/omnes_semibold_regular"
                android:text="@string/empty_value"
                android:textColor="@color/grey_2"
                android:textSize="15sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/retailer_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/omnes_regular"
                android:text="@string/establishment"
                android:textColor="@color/grey_2"
                android:textSize="15sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/retailer_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/omnes_semibold_regular"
                android:text="@string/empty_value"
                android:textColor="@color/grey_2"
                android:textSize="15sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/email_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/omnes_regular"
                android:text="@string/email"
                android:textColor="@color/grey_2"
                android:textSize="15sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/email_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/omnes_semibold_regular"
                android:text="@string/empty_value"
                android:textColor="@color/grey_2"
                android:textSize="15sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/phone_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/omnes_regular"
                android:gravity="end"
                android:text="@string/phone"
                android:textColor="@color/grey_2"
                android:textSize="15sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/phone_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/omnes_semibold_regular"
                android:text="@string/empty_value"
                android:textColor="@color/grey_2"
                android:textSize="15sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/address_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/omnes_regular"
                android:gravity="end"
                android:text="@string/address"
                android:textColor="@color/grey_2"
                android:textSize="15sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/address_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/omnes_semibold_regular"
                android:text="@string/empty_value"
                android:textColor="@color/grey_2"
                android:textSize="15sp" />

            <View
                android:id="@+id/separator_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_rounded_primary" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/bo_access_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/omnes_semibold_regular"
                android:text="@string/bo_access"
                android:textColor="@color/colorPrimary"
                android:textSize="19sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/bo_access_description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/omnes_semibold_regular"
                android:gravity="center"
                android:text="@string/bo_access_description"
                android:textColor="@color/grey_2"
                android:textSize="15sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/access_button_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rounded_primary"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="15dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_login" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/omnes_semibold_regular"
                    android:text="@string/access"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </net.noliaware.yumi_retailer.feature_profile.presentation.views.ProfileDataView>
    </androidx.core.widget.NestedScrollView>
</net.noliaware.yumi_retailer.feature_profile.presentation.views.ProfileDataParentView>